--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -106,6 +106,7 @@
     <Compile Include="New\TwitchStreamTag.cs" />
     <Compile Include="New\TwitchStreamTags.cs" />
     <Compile Include="V5\TwitchSearchChannels.cs" />
+    <Compile Include="V5\TwitchTeam.cs" />
     <Compile Include="V5\TwitchTopGame.cs" />
     <Compile Include="V5\TwitchTopGames.cs" />
     <Compile Include="V5\TwitchImageSet.cs" />
@@ -123,6 +124,7 @@
     <Compile Include="V5\TwitchAPIV5.cs" />
     <Compile Include="V5\TwitchUserNotifications.cs" />
     <Compile Include="V5\TwitchUserOwn.cs" />
+    <Compile Include="V5\TwitchAPITeam.cs" />
     <Compile Include="WebExplorerExtenstions.cs" />
   </ItemGroup>
   <ItemGroup>
