V5 Teams Get Team 구현

--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="V5\TestChannelsGetChannelByID.cs" />
     <Compile Include="V5\TestChannelsGetChannelEditors.cs" />
     <Compile Include="V5\TestTeamsGetAllTeams.cs" />
+    <Compile Include="V5\TestTeamsGetTeam.cs" />
     <Compile Include="V5\TestUsersUnblockUser.cs" />
     <Compile Include="V5\TestUsersBlockUser.cs" />
     <Compile Include="V5\TestUsersGetUser.cs" />
