--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -107,6 +107,7 @@
     <Compile Include="New\TwitchStreamTags.cs" />
     <Compile Include="V5\TwitchSearchChannels.cs" />
     <Compile Include="V5\TwitchTeam.cs" />
+    <Compile Include="V5\TwitchTeamAndChannels.cs" />
     <Compile Include="V5\TwitchTopGame.cs" />
     <Compile Include="V5\TwitchTopGames.cs" />
     <Compile Include="V5\TwitchImageSet.cs" />
