--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -64,6 +64,7 @@
     <Compile Include="V5\TestChannelsGetChannelFollowers.cs" />
     <Compile Include="V5\TestChannelsGetChannelByID.cs" />
     <Compile Include="V5\TestChannelsGetChannelEditors.cs" />
+    <Compile Include="V5\TestChannelsGetChannelSubscribers.cs" />
     <Compile Include="V5\TestChannelsGetChannelTeam.cs" />
     <Compile Include="V5\TestTeamsGetAllTeams.cs" />
     <Compile Include="V5\TestTeamsGetTeam.cs" />
