--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -95,6 +95,7 @@
     <Compile Include="V5\TwitchChannelFollow.cs" />
     <Compile Include="V5\TwitchChannelFollowers.cs" />
     <Compile Include="V5\TwitchChannelSubscription.cs" />
+    <Compile Include="V5\TwitchChannelSubscriptions.cs" />
     <Compile Include="V5\TwitchEmoticon.cs" />
     <Compile Include="V5\TwitchEmoticonSets.cs" />
     <Compile Include="TwitchException.cs" />
