--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="QueryResult.cs" />
     <Compile Include="TwitchAPITestAttribute.cs" />
     <Compile Include="UserInputReturnException.cs" />
+    <Compile Include="V5\TestChannelsCheckChannelSubscriptionByUser.cs" />
     <Compile Include="V5\TestChannelsGetChannelFollowers.cs" />
     <Compile Include="V5\TestChannelsGetChannelByID.cs" />
     <Compile Include="V5\TestChannelsGetChannelEditors.cs" />
