--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -68,6 +68,7 @@
     <Compile Include="V5\TestChannelsGetChannelSubscribers.cs" />
     <Compile Include="V5\TestChannelsGetChannelTeam.cs" />
     <Compile Include="V5\TestClipsGetClip.cs" />
+    <Compile Include="V5\TestClipsGetTopClips.cs" />
     <Compile Include="V5\TestUsersCheckUserFollowsByChannel.cs" />
     <Compile Include="V5\TestTeamsGetAllTeams.cs" />
     <Compile Include="V5\TestTeamsGetTeam.cs" />
