--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -66,7 +66,6 @@
     <Compile Include="OAuth\OAuthAccessTokenRequest.cs" />
     <Compile Include="OAuth\OAuthAuthorization.cs" />
     <Compile Include="OAuth\OAuthRequest.cs" />
-    <Compile Include="New\FollowsType.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="OAuth\OAuthRequestAuthorization.cs" />
     <Compile Include="OAuth\OAuthRequestOption.cs" />
@@ -145,5 +144,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
