--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -63,20 +63,20 @@
     <Compile Include="New\TwitchAPIGames.cs" />
     <Compile Include="New\TwitchAPIUsers.cs" />
     <Compile Include="New\TwitchAPINew.cs" />
-    <Compile Include="OAuth\OAuthAccessTokenRequest.cs" />
-    <Compile Include="OAuth\AuthenticationResult.cs" />
-    <Compile Include="OAuth\OAuthRequest.cs" />
+    <Compile Include="Authentication\OAuthAccessTokenRequest.cs" />
+    <Compile Include="Authentication\AuthenticationResult.cs" />
+    <Compile Include="Authentication\OAuthRequest.cs" />
     <Compile Include="JsonUtils.cs" />
-    <Compile Include="OAuth\OAuthRequestAuthorization.cs" />
-    <Compile Include="OAuth\OAuthRequestOption.cs" />
-    <Compile Include="OAuth\OAuthRequestToken.cs" />
-    <Compile Include="OAuth\OAuthResponseType.cs" />
+    <Compile Include="Authentication\OAuthRequestAuthorization.cs" />
+    <Compile Include="Authentication\OAuthRequestOption.cs" />
+    <Compile Include="Authentication\OAuthRequestToken.cs" />
+    <Compile Include="Authentication\OAuthResponseType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="APIVersion.cs" />
     <Compile Include="QueryValue.cs" />
     <Compile Include="QueryValues.cs" />
     <Compile Include="TwitchAPI.cs" />
-    <Compile Include="OAuth\TwitchAPIAuthentication.cs" />
+    <Compile Include="Authentication\TwitchAPIAuthentication.cs" />
     <Compile Include="V5\TwitchAPIBits.cs" />
     <Compile Include="V5\TwitchAPIChannels.cs" />
     <Compile Include="V5\TwitchAPIChat.cs" />
