--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -55,7 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="New\Pagination.cs" />
+    <Compile Include="New\TwitchAPIWebhooks.cs" />
     <Compile Include="New\TwitchTopGames.cs" />
+    <Compile Include="New\TwitchWebhookSubscription.cs" />
+    <Compile Include="New\TwitchWebhookSubscriptions.cs" />
     <Compile Include="V5\GetTopClipsPeriod.cs" />
     <Compile Include="V5\SortDirection.cs" />
     <Compile Include="V5\FollowSortMode.cs" />
