--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -120,8 +120,10 @@
     <Compile Include="TwitchAPIRequest.cs" />
     <Compile Include="New\TwitchStreamTag.cs" />
     <Compile Include="New\TwitchStreamTags.cs" />
+    <Compile Include="V5\TwitchGetLiveStreamsOptions.cs" />
     <Compile Include="V5\TwitchSearchChannels.cs" />
     <Compile Include="V5\TwitchStream.cs" />
+    <Compile Include="V5\TwitchLiveStreams.cs" />
     <Compile Include="V5\TwitchSubscription.cs" />
     <Compile Include="V5\TwitchTeam.cs" />
     <Compile Include="V5\TwitchTeamAndChannels.cs" />
