--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -60,9 +60,11 @@
     <Compile Include="New\TestGamesGetTopGames.cs" />
     <Compile Include="New\TestWebhooksGetWebhookSubscriptions.cs" />
     <Compile Include="New\TestWebhooksPostHub.cs" />
+    <Compile Include="ObjectUtils2.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="QueryResult.cs" />
     <Compile Include="TwitchAPITestAttribute.cs" />
+    <Compile Include="UserExtenstions.cs" />
     <Compile Include="UserInputReturnException.cs" />
     <Compile Include="V5\TestChannelsCheckChannelSubscriptionByUser.cs" />
     <Compile Include="V5\TestChannelsGetChannelFollowers.cs" />
