--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -116,6 +116,7 @@
     <Compile Include="V5\TwitchFollow.cs" />
     <Compile Include="New\TwitchGame.cs" />
     <Compile Include="V5\TwitchFollowedClips.cs" />
+    <Compile Include="V5\TwitchFollowedStreams.cs" />
     <Compile Include="V5\TwitchGame.cs" />
     <Compile Include="New\TwitchGetClipsOptions.cs" />
     <Compile Include="TwitchAPIRequest.cs" />
