--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -58,6 +58,7 @@
     <Compile Include="InputEditSnapshot.cs" />
     <Compile Include="New\TestClipsCreateClips.cs" />
     <Compile Include="New\TestGamesGetTopGames.cs" />
+    <Compile Include="New\TestStreamsGetStreamsMetadata.cs" />
     <Compile Include="New\TestWebhooksGetWebhookSubscriptions.cs" />
     <Compile Include="New\TestWebhooksPostHub.cs" />
     <Compile Include="New\TestStreamsGetStreams.cs" />
