--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -79,6 +79,7 @@
     <Compile Include="V5\TestClipsGetClip.cs" />
     <Compile Include="V5\TestClipsGetFollowedClips.cs" />
     <Compile Include="V5\TestClipsGetTopClips.cs" />
+    <Compile Include="V5\TestSearchStreams.cs" />
     <Compile Include="V5\TestStreamsGetFeaturedStreams.cs" />
     <Compile Include="V5\TestStreamsGetFollowedStreams.cs" />
     <Compile Include="V5\TestStreamsGetStreamsSummary.cs" />
