HubMode 생성, Webhooks 구독/해제시 사용

--- a/TwitchAPIs/TwitchAPIs.csproj
+++ b/TwitchAPIs/TwitchAPIs.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Authentication\OAuthRequestCode.cs" />
     <Compile Include="New\HearthstoneHero.cs" />
     <Compile Include="New\HearthstonePlayer.cs" />
+    <Compile Include="New\HubMode.cs" />
     <Compile Include="New\OverwatchHero.cs" />
     <Compile Include="New\OverwatchPlayer.cs" />
     <Compile Include="New\StreamMetadataHearthstone.cs" />
