--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="InputEditHistory.cs" />
     <Compile Include="InputEditType.cs" />
     <Compile Include="InputEditSnapshot.cs" />
+    <Compile Include="InputResult.cs" />
     <Compile Include="New\TestClipsCreateClips.cs" />
     <Compile Include="New\TestGamesGetTopGames.cs" />
     <Compile Include="New\TestStreamsGetStreamsMetadata.cs" />
