--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="V5\TestChannelsGetChannelEditors.cs" />
     <Compile Include="V5\TestChannelsGetChannelSubscribers.cs" />
     <Compile Include="V5\TestChannelsGetChannelTeam.cs" />
+    <Compile Include="V5\TestChatGetChatEmoticonsBySet.cs" />
     <Compile Include="V5\TestClipsGetClip.cs" />
     <Compile Include="V5\TestClipsGetFollowedClips.cs" />
     <Compile Include="V5\TestClipsGetTopClips.cs" />
