Other 사이트별 네임스페이스 구분, TwitchEmotesAPI GetEmotes, GetEmoteSets 추가

--- a/TwitchAPIs.Test/TwitchAPIs.Test.csproj
+++ b/TwitchAPIs.Test/TwitchAPIs.Test.csproj
@@ -69,6 +69,8 @@
     <Compile Include="ObjectUtils2.cs" />
     <Compile Include="Other\TestBadgesTwitchTVGetChannelBadges.cs" />
     <Compile Include="Other\TestCbenniAPIGetBadges.cs" />
+    <Compile Include="Other\TestTwitchEmotesAPIGetEmotes.cs" />
+    <Compile Include="Other\TestTwitchEmotesAPIGetEmoteSets.cs" />
     <Compile Include="PrintableLine.cs" />
     <Compile Include="QueryResult.cs" />
     <Compile Include="TestStep.cs" />
